--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -21,6 +21,8 @@
     "description": "AI-powered intelligent analysis for precise investment decisions",
     "searchPlaceholder": "Enter stock code (e.g., VNM, VCB...)",
     "searchPlaceholder_dates": "Enter number of days (e.g., 30, 60, 90...)",
+    "search_type_1": "Stock",
+    "search_type_2": "Crypto",
     "stockCode": "Code",
     "price": "Price",
     "change": "Change",
