--- a/src/locales/vi.json
+++ b/src/locales/vi.json
@@ -21,6 +21,8 @@
     "description": "Phân tích thông minh với AI để đưa ra quyết định đầu tư chính xác",
     "searchPlaceholder": "Nhập mã cổ phiếu (VD: VNM, VCB...)",
     "searchPlaceholder_dates": "Nhập số ngày (VD: 30, 60, 90...)",
+    "search_type_1": "Cổ phiếu",
+    "search_type_2": "Tiền ảo",
     "stockCode": "Mã CP",
     "price": "Giá",
     "change": "Thay đổi",
